# A.C.I

./: README.md
src/: .env  ai.py  analise.py  app.py  autenticador.py  config.py  create_job.py  credentials.json  database.py  db.json  download_cv.py  funcao_remove.py  helper.py  pyproject.toml
src/models/: resum.py
src/modls_mysql/: db_sql.py
